crates/spite-parser/tests/snapshots/objects__spread_property_syntax_and_diagnostics_snapshot-2.snap
---
source: crates/spite-parser/tests/objects.rs
expression: "parse_script(\"({...:1})\").unwrap_err()"
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 5,
        end: 6,
    },
    message: "expected an expression",
}
