crates/spite-parser/tests/snapshots/objects__spread_property_syntax_and_diagnostics_snapshot.snap
---
source: crates/spite-parser/tests/objects.rs
expression: "parse_script(\"({first:1,...source,[key]:2,...other=source, get x(){return 3;},...null,})\").unwrap()"
---
Script {
    statements: [
        Statement {
            kind: Expression(
                Expr {
                    depth: 4,
                    kind: Parenthesized(
                        Expr {
                            depth: 3,
                            kind: Object(
                                [
                                    Property(
                                        ObjectProperty {
                                            name: Literal(
                                                String(
                                                    "first",
                                                ),
                                            ),
                                            value: Expr {
                                                depth: 1,
                                                kind: Literal(
                                                    Number(
                                                        1.0,
                                                    ),
                                                ),
                                                span: Span {
                                                    start: 8,
                                                    end: 9,
                                                },
                                            },
                                            kind: Data,
                                            span: Span {
                                                start: 2,
                                                end: 9,
                                            },
                                        },
                                    ),
                                    Spread(
                                        Expr {
                                            depth: 1,
                                            kind: Identifier(
                                                "source",
                                            ),
                                            span: Span {
                                                start: 13,
                                                end: 19,
                                            },
                                        },
                                    ),
                                    Property(
                                        ObjectProperty {
                                            name: Computed(
                                                Expr {
                                                    depth: 1,
                                                    kind: Identifier(
                                                        "key",
                                                    ),
                                                    span: Span {
                                                        start: 21,
                                                        end: 24,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                depth: 1,
                                                kind: Literal(
                                                    Number(
                                                        2.0,
                                                    ),
                                                ),
                                                span: Span {
                                                    start: 26,
                                                    end: 27,
                                                },
                                            },
                                            kind: Data,
                                            span: Span {
                                                start: 20,
                                                end: 27,
                                            },
                                        },
                                    ),
                                    Spread(
                                        Expr {
                                            depth: 2,
                                            kind: Assign(
                                                Expr {
                                                    depth: 1,
                                                    kind: Identifier(
                                                        "other",
                                                    ),
                                                    span: Span {
                                                        start: 31,
                                                        end: 36,
                                                    },
                                                },
                                                Expr {
                                                    depth: 1,
                                                    kind: Identifier(
                                                        "source",
                                                    ),
                                                    span: Span {
                                                        start: 37,
                                                        end: 43,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 31,
                                                end: 43,
                                            },
                                        },
                                    ),
                                    Property(
                                        ObjectProperty {
                                            name: Literal(
                                                String(
                                                    "x",
                                                ),
                                            ),
                                            value: Expr {
                                                depth: 1,
                                                kind: Function(
                                                    Function {
                                                        name: None,
                                                        parameters: [],
                                                        body: FunctionBody {
                                                            statements: [
                                                                Statement {
                                                                    kind: Return(
                                                                        Some(
                                                                            Expr {
                                                                                depth: 1,
                                                                                kind: Literal(
                                                                                    Number(
                                                                                        3.0,
                                                                                    ),
                                                                                ),
                                                                                span: Span {
                                                                                    start: 60,
                                                                                    end: 61,
                                                                                },
                                                                            },
                                                                        ),
                                                                    ),
                                                                    span: Span {
                                                                        start: 53,
                                                                        end: 62,
                                                                    },
                                                                },
                                                            ],
                                                            strict: false,
                                                        },
                                                        source: FunctionSource(
                                                            "get x(){return 3;}",
                                                        ),
                                                    },
                                                ),
                                                span: Span {
                                                    start: 45,
                                                    end: 63,
                                                },
                                            },
                                            kind: Getter,
                                            span: Span {
                                                start: 45,
                                                end: 63,
                                            },
                                        },
                                    ),
                                    Spread(
                                        Expr {
                                            depth: 1,
                                            kind: Literal(
                                                Null,
                                            ),
                                            span: Span {
                                                start: 67,
                                                end: 71,
                                            },
                                        },
                                    ),
                                ],
                            ),
                            span: Span {
                                start: 1,
                                end: 73,
                            },
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 74,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 74,
            },
        },
    ],
    strict: false,
}
